fix: Toc navigation not visible

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -130,7 +130,7 @@
 }
 
 .col--3 { 
-  max-width: 15% !important;
+  max-width: 10% !important;
   flex: 1 1 0;
  }
 
